# tesoreria_gem

./: .gitignore  README.md  dragdrop_tesoreria_data.py  pyproject.toml  requirements.txt
