[project]
name = "tesoreria-gem"
version = "0.1.0"
description = "Cargar extracto bancario en hoja de cálculo de Google Sheets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
    "streamlit>=1.43.2",
    "xlrd>=2.0.1",
]
